--- a/app/views/badges/_badge.html.erb
+++ b/app/views/badges/_badge.html.erb
@@ -1,4 +1,4 @@
 <tr>
   <td><%= badge.name %></td>
-  <td><%= badge.picture %></td>
+  <td><%= image_tag('/public/badges/' + badge.picture, size: "100", alt: badge.picture.to_s) %></td>
 </tr>
