Fix: user может посмотреть все существующие и заработанные им бейджи

--- a/app/views/badges/_badge.html.erb
+++ b/app/views/badges/_badge.html.erb
@@ -1,4 +1,6 @@
-<tr>
-  <td><%= badge.name %></td>
-  <td><%= image_tag('/public/badges/' + badge.picture, size: "100", alt: badge.picture.to_s) %></td>
-</tr>
+<% badges.each do |badge| %>
+  <tr>
+    <td><%= badge.name %></td>
+    <td><%= image_tag('/public/badges/' + badge.picture, size: "100", alt: badge.picture.to_s) %></td>
+  </tr>
+<% end %>
