Fix: переход по кнопке редактирования

--- a/app/views/admin/badges/_badge.html.erb
+++ b/app/views/admin/badges/_badge.html.erb
@@ -4,7 +4,7 @@
   <td><%= badge.rule_name %></td>
   <td><%= badge.parameter %></td>
   <td>
-    <%= link_to t('.edit'), edit_admin_badge_path(badge), class: 'btn btn-outline-success btn-sm form-inline-link' %>
+    <%= link_to t('.edit'), edit_admin_badge_path(badge), class: 'btn btn-outline-success btn-sm' %>
   </td>
   <td>
     <%= link_to t('.delete'), admin_badge_path(badge), method: :delete, data: { confirm: t('.confirm')}, class: 'btn btn-outline-danger btn-sm' %>
