--- a/app/views/admin/tests/_test.html.erb
+++ b/app/views/admin/tests/_test.html.erb
@@ -9,6 +9,12 @@
   <td><%= test_level(test) %></td>
   <td><%= test.category.title %></td>
   <td><%= number_of_questions(test) %></td>
+  <td>
+    <% if test.timer %>
+        <%= test.timer %>
+    <% else %>—
+    <% end %>
+  </td>
   <td><%= link_to t('.show'), admin_test_path(test), class: 'btn btn-outline-dark btn-sm' %></td>
   <td>
     <%= link_to t('.edit'),
