--- a/app/views/admin/tests/index.html.erb
+++ b/app/views/admin/tests/index.html.erb
@@ -16,6 +16,9 @@
         <th><%= Test.human_attribute_name(:level) %></th>
         <th><%= Test.human_attribute_name(:category) %></th>
         <th><%= t('.table_count_question') %></th>
+        <th>
+          <%= Test.human_attribute_name(:timer) %><small><em> <%= t('.format') %></em></small>
+        </th>
         <th colspan="3"><%= t('.table_actions') %></th>
       </tr>
     </thead>
