--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -12,6 +12,9 @@
         <th><%= Test.human_attribute_name(:level) %></th>
         <th><%= Test.human_attribute_name(:category) %></th>
         <th><%= t('.table_count_question') %></th>
+        <th>
+          <%= Test.human_attribute_name(:timer) %><small><em> <%= t('.format') %></em></small>
+        </th>
         <th><%= t('.table_actions') %></th>
       </tr>
     </thead>
