--- a/app/views/admin/tests/index.html.erb
+++ b/app/views/admin/tests/index.html.erb
@@ -17,7 +17,7 @@
         <th><%= Test.human_attribute_name(:category) %></th>
         <th><%= t('.table_count_question') %></th>
         <th>
-          <%= Test.human_attribute_name(:timer) %><small><em> <%= t('.format') %></em></small>
+          <%= Test.human_attribute_name(:timer) %><span class="small font-italic"> <%= t('.format') %></span>
         </th>
         <th colspan="3"><%= t('.table_actions') %></th>
       </tr>
