--- a/app/views/admin/tests/show.html.erb
+++ b/app/views/admin/tests/show.html.erb
@@ -9,6 +9,11 @@
     <h5 class="col-sm-2"><%= Test.human_attribute_name(:category) %>:</h5>
     <dd class="col-sm-10"><%= @test.category.title %></dd>
     <br>
+    <h5 class="col-sm-2">
+      <%= Test.human_attribute_name(:timer) %><span class="small font-italic"> <%= t('.format') %></span>:
+    </h5>
+    <dd class="col-sm-10"><%= @test.timer %></dd>
+    <br>
     <h5 class="col-sm-2"><%= t('.test_questions') %>:</h5>
     <dd class="col-sm-10"><%= render 'admin/questions/question', questions: @test.questions %></dd>
   </dl>
